force-app/main/default/objects/BookAuthor__c/BookAuthor__c.object-meta.xml
<CustomObject>
    <description>Task 6</description>
    <label>BookAuthor</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>BookAuthor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BookAuthors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>