force-app/main/default/objects/BookAuthor__c/fields/AuthorID__c.field-meta.xml
<CustomField>
    <fullName>AuthorID__c</fullName>
    <label>AuthorID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>