force-app/main/default/objects/BookAuthor__c/fields/BookAuthorName__c.field-meta.xml
<CustomField>
    <fullName>BookAuthorName__c</fullName>
    <label>BookAuthorName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>