force-app/main/default/objects/BookAuthor__c/fields/BookID__c.field-meta.xml
<CustomField>
    <fullName>BookID__c</fullName>
    <label>BookID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>