force-app/main/default/objects/BookAuthor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BookAuthorName__c</columns>
    <columns>BookID__c</columns>
    <columns>AuthorID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>